--- a/src/pages/dates.css
+++ b/src/pages/dates.css
@@ -1,6 +1,15 @@
 body{
     background-color: #93b1ec;
 }
+h1 {
+  text-align: center;
+}
+
+.loginButton{
+  justify-content: center;
+  display: flex;
+}
+
 .dates {
     text-align: center;
     background-color: #93b1ec;
@@ -34,10 +43,12 @@ input {
     font-size: 1.2em;
     text-align: center;
 }
+
 .selectDiv2{
     width:200px;
     justify-content: center;
     margin-left: auto;
     margin-right:auto;
     color: black;
+    background-color: #ec93a9;
 }
